# q-

./: Cargo.toml  PROMPT-MESTRE-OFICIAL-EXCELENCIA.md  PROMPT-MESTRE-OFICIAL-LYSIAN.md
catalog/catalog-service/: Cargo.toml
catalog/catalog-service/src/: main.rs
catalog/product-core/: Cargo.toml
catalog/product-core/src/: lib.rs
docs/: plano-negocio-plataforma-varejo-dados.md  requisitos-cadastro-produtos.md
examples/: import_gtin.rs
