[package]
name = "catalog-service"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = "0.8.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["cors"] }
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.18.1", features = ["v4"] }
